--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
     reset.addEventListener('click', () => { count = 0; countOut.value = 0; localStorage.setItem('count', 0); });
   </script>
 </body>
+   <h1>THis is version v3<h1>
 </html>
  
