Click4 to me to you

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <h2>About This Page</h2>
     <p>This is a simple HTML and CSS example. You can use this as a base to create your own website.</p>
 
-    <button>Click2 Me</button>
+    <button>Click4 Me to you</button>
   </main>
 
   <!-- Footer -->
